--- a/phala-cloud/getting-started/attestation.mdx
+++ b/phala-cloud/getting-started/attestation.mdx
@@ -1,6 +1,6 @@
 ---
 title: Get Attestation and Verifying
-description: Security features and remote attestation capabilities of Phala Cloud
+description: This guide walks you through how to get an attestation and verify it, step by step.
 ---
 
 
