--- a/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent.mdx
+++ b/phala-cloud/getting-started/explore-templates/launch-an-eliza-agent.mdx
@@ -1,5 +1,5 @@
 ---
-description: Quick start guide for deploying confidential applications on Phala Cloud.
+description: Quick guide for launching Eliza Agent on Phala Cloud
 title: Eliza Agent
 ---
 
