--- a/phala-cloud/getting-started/explore-templates/overview.mdx
+++ b/phala-cloud/getting-started/explore-templates/overview.mdx
@@ -1,5 +1,5 @@
 ---
-description: Quick start guide for deploying confidential applications on Phala Cloud.
+description: This guide will walk you through using Phala Cloud templates to deploy TEE apps.
 title: Quick Start Guide
 ---
 
