--- a/phala-cloud/getting-started/explore-templates/start-from-template.mdx
+++ b/phala-cloud/getting-started/explore-templates/start-from-template.mdx
@@ -1,5 +1,5 @@
 ---
-description: Quick start guide for deploying confidential applications on Phala Cloud.
+description: Get started quickly with Next.js and Python templates on Phala Cloud.
 title: NextJS & Python
 ---
 
