--- a/phala-cloud/getting-started/sign-up-for-cloud-account.mdx
+++ b/phala-cloud/getting-started/sign-up-for-cloud-account.mdx
@@ -1,5 +1,5 @@
 ---
-description: Quick start guide for deploying confidential applications on Phala Cloud.
+description: Quick guide for how to signup for Phala Cloud account.
 title: Create Account
 ---
 
