--- a/phala-cloud/getting-started/start-from-cloud-ui.mdx
+++ b/phala-cloud/getting-started/start-from-cloud-ui.mdx
@@ -1,5 +1,5 @@
 ---
-description: Quick start guide for deploying confidential applications on Phala Cloud.
+description: This guide will walk you through deploying a TEE app step by step.
 title: CVM Deployment
 ---
 
