simplify the description

--- a/phala-cloud/confidential-ai/confidential-model/inference-api.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/inference-api.mdx
@@ -1,6 +1,5 @@
 ---
-description: Secure LLM inference API running in GPU Trusted Execution Environment
-  (TEE) for confidential AI computing.
+description: Secure LLM inference API running in GPU TEE for confidential AI computing.
 title: GPU TEE Inference API
 ---
 
