add article of confidential-gpu and update inference-api

--- a/phala-cloud/confidential-ai/confidential-model/inference-api.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/inference-api.mdx
@@ -1,6 +1,6 @@
 ---
 description: Secure LLM inference API running in GPU TEE for confidential AI computing.
-title: GPU TEE Inference API
+title: Confidential AI API
 ---
 
 
