--- a/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
+++ b/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
@@ -1,33 +1,44 @@
 ---
-description: Run Large Language Models securely in GPU Trusted Execution Environment
-  (TEE) for confidential AI.
+description: Rent Confidential GPU on Phala Cloud with various GPU device and flexible subscription.
 title: Overview
 ---
 
+# Confidential GPU Service
 
-## Overview
+Rent a Phala Cloud GPU Server with Confidential Computing capabilities. Deploy your models (training or inference) in a TEE-secured environment, just like a standard GPU server.
 
-Private AI or called confidential AI addresses critical concerns such as data privacy, secure execution, and computation verifiability, making it indispensable for sensitive applications. As illustrated in the diagram below, people currently cannot fully trust the responses returned by LLMs from services like OpenAI or Meta, due to the lack of cryptographic verification. By running the LLM inside a TEE, we can add verification primitives alongside the returned response, known as a Remote Attestation (RA) Report. This allows users to verify the AI generation results locally without relying on any third parties.
+## Available GPU Options
 
-<Frame>
-    <img src="/images/compare-llm-with-tee-or-not.png" alt="Compare LLM with TEE or not" />
+Choose from high-performance GPUs:
+
+- H200
+- H100
+- B200
+
+<Frame caption="GPU Device">
+    <img src="/images/confidential-ai/confidential-gpu/gpu-tee-01.png" />
 </Frame>
 
-## Implementation
+## Customizable Hardware
 
-The implementation for running LLMs in GPU TEE is available in the [private-ml-sdk](https://github.com/nearai/private-ml-sdk) GitHub repository. This project is built by Phala Network and was made possible through a grant from NEARAI. The SDK provides the necessary tools and infrastructure to deploy and run LLMs securely within GPU TEE.
+Select your preferred configuration:
 
-<Frame>
-    <img src="/images/private-ml-sdk.png" alt="" />
+- CPU, RAM, Storage
+- Location (data center regions)
+- GPU Quantity (1 GPU or up to 8 GPUs for scaling)
+
+## Commitment Period
+
+Flexible subscription options:
+
+- 6 months
+- 1 month
+- On-demand (pay-as-you-go)
+
+## Review & Order
+
+Check the Price section to confirm your hardware specs and cost. Click **Submit Order** to complete your purchase.
+
+<Frame caption="Review & Submit Order">
+    <img src="/images/confidential-ai/confidential-gpu/gpu-tee-02.png" />
 </Frame>
-
-## References
-
-1. [HCC-Whitepaper](https://images.nvidia.com/aem-dam/en-zz/Solutions/data-center/HCC-Whitepaper-v1.0.pdf)
-2. [Intel SGX DCAP Orientation](https://www.intel.com/content/dam/develop/public/us/en/documents/intel-sgx-dcap-ecdsa-orientation.pdf)
-3. [Phala's dcap-qvl](https://github.com/Phala-Network/dcap-qvl)
-4. [Automata's Solidity Implementation](https://github.com/automata-network/automata-dcap-attestation)
-5. [Phala Nvidia H200 TEE Benchmark Paper](https://arxiv.org/pdf/2409.03992)
-6. [Phala DeRoT Post on FlashBots forum](https://collective.flashbots.net/t/early-thoughts-on-decentralized-root-of-trust/3868)
-7. [Phala Key Management Protocol Post on Flashbots forum](https://collective.flashbots.net/t/key-management-protocol-for-decentralized-root-of-trust/4004)
-8. [Private ML SDK](https://github.com/nearai/private-ml-sdk)
