restructure confidential-ai

--- a/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
+++ b/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
@@ -1,6 +1,6 @@
 ---
 description: Rent Confidential GPU on Phala Cloud with various GPU device and flexible subscription.
-title: Overview
+title: Confidential GPU
 ---
 
 # Confidential GPU Service
