add article of confidential-ai-models

--- a/phala-cloud/getting-started/start-from-cloud-ui.mdx
+++ b/phala-cloud/getting-started/start-from-cloud-ui.mdx
@@ -16,7 +16,7 @@ Make sure you have gone through the [Sign-up for Cloud Account](/phala-cloud/get
 
 Click the **Deploy** -> **docker-compose.yml** in the top-right corner of the cloud [dashboard](https://cloud.phala.network/dashboard). Once there, you need to:
 
-1. Set your application **Name** (e.g. "hello-world")
+1. Set your application **Name** (e.g., "hello-world")
 2. Paste the config file to describe your service in docker compose format as docker compose file. In this tutorial, we deploy a basic jupyter-notebook without any code change.
 
     <Frame caption="Docker Compose File">
