--- a/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
+++ b/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
@@ -3,7 +3,7 @@ description: Rent Confidential GPU on Phala Cloud with various GPU device and fl
 title: Confidential GPU
 ---
 
-# Confidential GPU Service
+## Overview
 
 Rent a Phala Cloud GPU Server with Confidential Computing capabilities. Deploy your models (training or inference) in a TEE-secured environment, just like a standard GPU server.
 
