--- a/phala-cloud/confidential-ai/benchmark.mdx
+++ b/phala-cloud/confidential-ai/benchmark.mdx
@@ -3,6 +3,15 @@ description: Performance benchmarks and metrics for LLM inference in GPU TEE env
 title: GPU TEE Benchmark
 ---
 
+## Benchmark Overview
+
+As confidential AI gains traction for privacy-preserving applications, evaluating the performance overhead of running LLM in TEE on GPUs is essential. This benchmark provides developers with quantitative insights into GPU TEE efficiency.
+
+## GPU TEE Performance
+
+<Frame caption="Benchmark">
+    <img src="/images/confidential-ai/benchmark_result.png" />
+</Frame>
 
 **The benchmark is based on running LLMs in NVIDIA H100 and H200,** our results show that as input size grows, the efficiency of TEE mode increases significantly.
 
