--- a/phala-cloud/attestation/api-quickstart.mdx
+++ b/phala-cloud/attestation/api-quickstart.mdx
@@ -18,26 +18,14 @@ Upload your attestation quote to Phala Cloud for secure storage and cryptographi
 - **File Upload**: Binary quote file via multipart/form-data
 - **Hex String**: Quote data as hexadecimal string (JSON or form data)
 
+#### File Upload Example
+
 <Tabs>
   <Tab title="File Upload - cURL">
     ```bash
     curl -X POST "https://cloud-api.phala.network/api/v1/attestations/verify" \
       -H "Content-Type: multipart/form-data" \
       -F "file=@quote.bin"
-    ```
-  </Tab>
-  <Tab title="Hex JSON - cURL">
-    ```bash
-    curl -X POST "https://cloud-api.phala.network/api/v1/attestations/verify" \
-      -H "Content-Type: application/json" \
-      -d '{"hex": "0x48656c6c6f20576f726c64..."}'
-    ```
-  </Tab>
-  <Tab title="Hex Form - cURL">
-    ```bash
-    curl -X POST "https://cloud-api.phala.network/api/v1/attestations/verify" \
-      -H "Content-Type: application/x-www-form-urlencoded" \
-      -d "hex=48656c6c6f20576f726c64..."
     ```
   </Tab>
   <Tab title="File Upload - JavaScript">
@@ -50,23 +38,6 @@ Upload your attestation quote to Phala Cloud for secure storage and cryptographi
     const response = await fetch('https://cloud-api.phala.network/api/v1/attestations/verify', {
       method: 'POST',
       body: formData
-    });
-
-    const result = await response.json();
-    console.log('Verification result:', result);
-    ```
-  </Tab>
-  <Tab title="Hex JSON - JavaScript">
-    ```javascript
-    // Send hex string as JSON
-    const hexData = "0x48656c6c6f20576f726c64..."; // Your quote as hex
-    
-    const response = await fetch('https://cloud-api.phala.network/api/v1/attestations/verify', {
-      method: 'POST',
-      headers: {
-        'Content-Type': 'application/json'
-      },
-      body: JSON.stringify({ hex: hexData })
     });
 
     const result = await response.json();
@@ -91,6 +62,35 @@ Upload your attestation quote to Phala Cloud for secure storage and cryptographi
     print(f"Checksum: {result['checksum']}")
     ```
   </Tab>
+</Tabs>
+
+#### Hex JSON Example
+
+<Tabs>
+  <Tab title="Hex JSON - cURL">
+    ```bash
+    curl -X POST "https://cloud-api.phala.network/api/v1/attestations/verify" \
+      -H "Content-Type: application/json" \
+      -d '{"hex": "0x48656c6c6f20576f726c64..."}'
+    ```
+  </Tab>
+  <Tab title="Hex JSON - JavaScript">
+    ```javascript
+    // Send hex string as JSON
+    const hexData = "0x48656c6c6f20576f726c64..."; // Your quote as hex
+    
+    const response = await fetch('https://cloud-api.phala.network/api/v1/attestations/verify', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ hex: hexData })
+    });
+
+    const result = await response.json();
+    console.log('Verification result:', result);
+    ```
+  </Tab>
   <Tab title="Hex JSON - Python">
     ```python
     import requests
@@ -107,6 +107,36 @@ Upload your attestation quote to Phala Cloud for secure storage and cryptographi
     print(f"Success: {result['success']}")
     print(f"Verified: {result['quote']['verified']}")
     print(f"Checksum: {result['checksum']}")
+    ```
+  </Tab>
+</Tabs>
+
+#### Hex Form Example
+
+<Tabs>
+
+  <Tab title="Hex Form - cURL">
+    ```bash
+    curl -X POST "https://cloud-api.phala.network/api/v1/attestations/verify" \
+      -H "Content-Type: application/x-www-form-urlencoded" \
+      -d "hex=48656c6c6f20576f726c64..."
+    ```
+  </Tab>
+  <Tab title="Hex JSON - JavaScript">
+    ```javascript
+    // Send hex string as JSON
+    const hexData = "0x48656c6c6f20576f726c64..."; // Your quote as hex
+    
+    const response = await fetch('https://cloud-api.phala.network/api/v1/attestations/verify', {
+      method: 'POST',
+      headers: {
+        'Content-Type': 'application/json'
+      },
+      body: JSON.stringify({ hex: hexData })
+    });
+
+    const result = await response.json();
+    console.log('Verification result:', result);
     ```
   </Tab>
   <Tab title="Hex Form - Python">
@@ -128,6 +158,7 @@ Upload your attestation quote to Phala Cloud for secure storage and cryptographi
     ```
   </Tab>
 </Tabs>
+
 **Response:**
 ```json
 {
