fix: broken link

--- a/phala-cloud/attestation/api-quickstart.mdx
+++ b/phala-cloud/attestation/api-quickstart.mdx
@@ -579,6 +579,6 @@ If problems persist:
 
 ## Next Steps
 
-- Read the [Detailed API Reference](./attestations-reference.md) for complete field descriptions
+- Read the [Detailed API Reference](/phala-cloud/phala-cloud-api/attestations) for complete field descriptions
 - Check out examples for your specific SGX/TDX platform
 - Learn about integrating Phala Cloud's remote attestation service into your application workflow
