--- a/phala-cloud/confidential-ai/overview.mdx
+++ b/phala-cloud/confidential-ai/overview.mdx
@@ -32,7 +32,7 @@ Phala Cloud provides two major products to provide GPU TEE for confidential AI.
 
 And if you want to have GPU TEE server to serve your owen GPU service under the protection of TEE, you should choose **Confidential GPU** service. 
 
-### Opensource Implementation
+### Open Source
 
 The implementation for running LLMs in GPU TEE is also available in the [private-ml-sdk](https://github.com/nearai/private-ml-sdk) GitHub repository. This project is built by Phala Network and was made possible through a grant from NEARAI. The SDK provides the necessary tools and infrastructure to deploy and run LLMs securely within GPU TEE.
 
