--- a/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
+++ b/phala-cloud/confidential-ai/confidential-gpu/overview.mdx
@@ -3,8 +3,6 @@ description: Rent Confidential GPU on Phala Cloud with various GPU device and fl
 title: Confidential GPU
 ---
 
-## Overview
-
 Rent a Phala Cloud GPU Server with Confidential Computing capabilities. Deploy your models (training or inference) in a TEE-secured environment, just like a standard GPU server.
 
 ## Available GPU Options
@@ -16,7 +14,7 @@ Choose from high-performance GPUs:
 - B200
 
 <Frame caption="GPU Device">
-    <img src="/images/confidential-ai/confidential-gpu/gpu-tee-01.png" />
+  <img src="/images/confidential-ai/confidential-gpu/gpu-tee-01.png" />
 </Frame>
 
 ## Customizable Hardware
@@ -37,8 +35,10 @@ Flexible subscription options:
 
 ## Review & Order
 
-Check the Price section to confirm your hardware specs and cost. Click **Submit Order** to complete your purchase.
+Check the Price section to confirm your hardware specs and cost. Click **Submit Order** to submit order.
 
 <Frame caption="Review & Submit Order">
-    <img src="/images/confidential-ai/confidential-gpu/gpu-tee-02.png" />
+  <img src="/images/confidential-ai/confidential-gpu/gpu-tee-02.png" />
 </Frame>
+
+Once successfully submitted, the Phala Cloud team will received the request and will contact you soon.
