--- a/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
@@ -5,8 +5,7 @@ title: Confidential AI API
 
 ## Overview
 
-Phala Cloud provides a simple, powerfull and efficiency API to help you access majory LLM through a unified , which could help you use hassle-free integration using its OpenAI-compatible format. Deploy seamlessly across cloud, on-premises, or edge environments.
-
+Phala Cloud provides a simple, powerfull and efficiency API to help you access majory LLM through a unified , which could help you use hassle-free integration using its OpenAI-compatible format. Deploy your application seamlessly across cloud, on-premises, or edge environments.
 
 Phala Cloud provides various LLM inference API. By navigating to **Dashboard -> Confidential AI API** page, you will see details.
 
