restructure confidential-ai

--- a/phala-cloud/confidential-ai/benchmark.mdx
+++ b/phala-cloud/confidential-ai/benchmark.mdx
@@ -1,6 +1,6 @@
 ---
 description: Performance benchmarks and metrics for LLM inference in GPU TEE environments.
-title: GPU TEE Benchmark
+title: Benchmark
 ---
 
 ## Benchmark Overview
