--- a/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/confidential-ai-api.mdx
@@ -1,6 +1,6 @@
 ---
 description: Secure LLM inference API running in GPU TEE for confidential AI computing.
-title: Confidential AI API
+title: Use AI API
 ---
 
 ## Overview
