--- a/phala-cloud/confidential-ai/confidential-model/confidential-ai-models.mdx
+++ b/phala-cloud/confidential-ai/confidential-model/confidential-ai-models.mdx
@@ -1,6 +1,6 @@
 ---
 description: Deploy and manage AI models in a secure, confidential computing environment
-title: Confidential AI Models
+title: Deploy Models
 ---
 
 If you want to deploy exclusive LLM service on GPU TEE, Confidential AI Models service is what you want.
